[package]
name = "aoc_lib"
version = "1.0.0"
edition = "2021"
authors = ["Keval Kapdee <keval@thechubbypanda.net>"]
description = "A library that lets you focus on problem-solving rather than boilerplate when doing Advent of Code"
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/thechubbypanda/aoc/aoc_lib"

[dependencies]
home = "0.5.4"
reqwest = { version = "0.11.13", features = ["blocking"] }
scanf = "1.2.1"
